--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
     </div>
 
-    <div id="comment" class="hidden md:block bg-[#447f74] w-fit text-white py-4 fixed bottom-4 z-30 c right-4 px-6 rounded-xl text-3xl">
+    <div id="comment" class="hidden md:block bg-[#447f74] w-fit text-white py-4 fixed cursor-pointer bottom-4 z-30 c right-4 px-6 rounded-xl text-3xl">
         <i class="fa-solid fa-comment"></i>
     </div>
 
